--- a/index do mate.html
+++ b/index do mate.html
@@ -1,6 +1,7 @@
-Somos a Loja do chimarrão.
+head
+<h1> <strong>Somos a Loja do chimarrão.</h1></strong>
 
-Situado na Br 476,no trevo da Rei Verde-PR.Trazemos para região o melhor do Mate. 
+<body> Situado na Br 476,no trevo da Rei Verde-PR.Trazemos para região o melhor do Mate. 
 
 Com grande quantidade de chás,cuias,bombas personalizadas,temos grande variedade de ervas para degustação bem como kits prontos para
 presentes.Também dispomos de água quente para você amigo cliente que está em viagem. 
